[package]
name = "quiche-generic-client-server"
version = "0.1.0"
authors = ["François Michel <francois.michel@uclouvain.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "/src",
]

# server
[[bin]]
name = "generic-http3-server"           # The name of the target.
path = "src/generic-http3-server.rs"    # The source file of the target.
# client
[[bin]]
name = "generic-http3-client"           # The name of the target.
path = "src/generic-http3-client.rs"    # The source file of the target.

[dependencies]
mio = "0.6"
url = "1"
log = { version = "0.4", features = ["std"] }
libc = "0.2"
libm = "0.2"
ring = "0.16"
lazy_static = "1"
env_logger = { version = "0.8.1" }
docopt = "1"
serde = { version = "1", features = ["derive"] }
rand = "0.7"
quiche = { git = "https://github.com/cloudflare/quiche", rev = "18a682b" }
